# src/gs-api/src/models/statistique-periode-dto.ts
@@ -1,0 +1,7 @@
+/* tslint:disable */
+export interface StatistiquePeriodeDto {
+  impayer?: number;
+  payer?: number;
+  recouvrement?: number;
+  periode?: string;
+}
